--- a/resources.qrc
+++ b/resources.qrc
@@ -1,5 +1,11 @@
 <RCC>
     <qresource prefix="/plugins/Qweb" >
         <file>icon.png</file>
+		<file>icons/back.png</file>
+		<file>icons/forward.png</file>
+		<file>icons/refresh.png</file>
+		<file>icons/home.png</file>
+		<file>icons/mActionZoomIn.svg</file>
+		<file>icons/mActionZoomOut.svg</file>
     </qresource>
 </RCC>
