--- a/Qweb_dockwidget_base.ui
+++ b/Qweb_dockwidget_base.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>562</width>
+    <width>643</width>
     <height>685</height>
    </rect>
   </property>
@@ -17,11 +17,11 @@
    </sizepolicy>
   </property>
   <property name="windowTitle">
-   <string>QWeb</string>
+   <string>QWeb Browser</string>
   </property>
   <widget class="QWidget" name="dockWidgetContents">
    <layout class="QGridLayout" name="gridLayout">
-    <item row="0" column="0">
+    <item row="1" column="0">
      <layout class="QVBoxLayout" name="verticalLayout">
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout">
@@ -30,6 +30,9 @@
         </property>
         <item>
          <widget class="QPushButton" name="back">
+          <property name="toolTip">
+           <string>Back</string>
+          </property>
           <property name="text">
            <string>Back</string>
           </property>
@@ -37,6 +40,9 @@
         </item>
         <item>
          <widget class="QPushButton" name="forward">
+          <property name="toolTip">
+           <string>Forward</string>
+          </property>
           <property name="text">
            <string>Forward</string>
           </property>
@@ -44,6 +50,9 @@
         </item>
         <item>
          <widget class="QPushButton" name="refresh">
+          <property name="toolTip">
+           <string>Reload Page</string>
+          </property>
           <property name="text">
            <string>Reload</string>
           </property>
@@ -51,6 +60,9 @@
         </item>
         <item>
          <widget class="QPushButton" name="zoom_in">
+          <property name="toolTip">
+           <string>Zoom In</string>
+          </property>
           <property name="text">
            <string>Zin</string>
           </property>
@@ -58,6 +70,9 @@
         </item>
         <item>
          <widget class="QPushButton" name="zoom_out">
+          <property name="toolTip">
+           <string>Zoom Out</string>
+          </property>
           <property name="text">
            <string>Zout</string>
           </property>
@@ -65,8 +80,21 @@
         </item>
         <item>
          <widget class="QPushButton" name="home">
+          <property name="toolTip">
+           <string>Home</string>
+          </property>
           <property name="text">
            <string>Home</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QToolButton" name="new_tab">
+          <property name="toolTip">
+           <string>New Tab</string>
+          </property>
+          <property name="text">
+           <string>+</string>
           </property>
          </widget>
         </item>
@@ -79,33 +107,62 @@
            </sizepolicy>
           </property>
           <property name="text">
-           <string>https://www.google.com</string>
+           <string>https://qgis.org</string>
           </property>
          </widget>
         </item>
        </layout>
       </item>
       <item>
-       <widget class="QWebView" name="webView" native="true">
+       <widget class="QTabWidget" name="tabWidget">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
-        <property name="font">
-         <font>
-          <family>MS Shell Dlg 2</family>
-         </font>
+        <property name="currentIndex">
+         <number>0</number>
         </property>
-        <property name="url" stdset="0">
-         <url>
-          <string>https://www.google.com/</string>
-         </url>
+        <property name="tabsClosable">
+         <bool>false</bool>
         </property>
-        <property name="zoomFactor" stdset="0">
-         <double>1.000000000000000</double>
+        <property name="movable">
+         <bool>true</bool>
         </property>
+        <property name="tabBarAutoHide">
+         <bool>false</bool>
+        </property>
+        <widget class="QWidget" name="tab">
+         <attribute name="title">
+          <string>Welcome to the QGIS project!</string>
+         </attribute>
+         <layout class="QGridLayout" name="gridLayout_2">
+          <item row="1" column="0">
+           <widget class="QWebView" name="webView" native="true">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="font">
+             <font>
+              <family>MS Shell Dlg 2</family>
+             </font>
+            </property>
+            <property name="url" stdset="0">
+             <url>
+              <string>https://www.google.com/</string>
+             </url>
+            </property>
+            <property name="zoomFactor" stdset="0">
+             <double>1.000000000000000</double>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </widget>
        </widget>
       </item>
      </layout>
